create blog page

--- a/src/blog.html
+++ b/src/blog.html
@@ -1,90 +1,122 @@
 <!DOCTYPE html>
 
 <html lang="es">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>LlavaRock. Festival de música</title>
-    <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
-    <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
-    <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>LlavaRock. Festival de música</title>
+        <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
+        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
+        <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
-</head>
-<body>
-<header class="row info-row px-3 py-2">
-    <a class="col-auto logo" href="/">
-        <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
-    </a>
-    <div class="col px-0"></div>
-    <a class="col-auto info-row__link" href="grups.html">
-        <span class="align-middle info-row__text">Grups</span>
-    </a>
-    <a class="col-auto info-row__link info-row__link--selected" href="blog.html">
-        <span lang="en" class="align-middle info-row__text">Blog</span>
-    </a>
-    <a class="col-auto info-row__link" href="contacte.html">
-        <span class="align-middle info-row__text">Contacte</span>
-    </a>
-</header>
-<div class="body">
-    <div>
-        hola
-        <i class="fas fa-envelope"></i>
-        adios
-    </div>
+    </head>
+    <body>
+        <header class="row info-row px-3 py-2">
+            <a class="col-auto logo" href="/">
+                <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+            </a>
+            <div class="col px-0"></div>
+            <a class="col-auto info-row__link" href="grups.html">
+                <span class="align-middle info-row__text">Grups</span>
+            </a>
+            <a class="col-auto info-row__link info-row__link--selected" href="blog.html">
+                <span lang="en" class="align-middle info-row__text">Blog</span>
+            </a>
+            <a class="col-auto info-row__link" href="contacte.html">
+                <span class="align-middle info-row__text">Contacte</span>
+            </a>
+        </header>
+        <div class="blog mx-0">
+            <img src="assets/images/santAndreuDeLlavaneres.png" alt="Concert" class="blob__image--header" title="Concert">
 
-</div>
-<footer>
-    <div class="footer border-bottom border-white">
-        <div class="row mx-2 mb-2">
-            <div class="col-auto mx-auto text-center">
-                Disfruta del festival a Sant Andreu de llavaneres.
-                <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
-                    <i class="fas fa-map-marker-alt"></i>
+            <div class="body mx-4">
+                <p>
+                    Com cada any a finals de Novembre celebrarem la festa major d'hivern a Sant Andreu de Llavaneres.
+                    Aquest any a estat especialment dur per a tothom i és per aquest motiu que enguany, més que mai, tots tenim ganes de celebrar alguna cosa,
+                    i que millor que la festa major del nostre poble.
+                </p>
+                <p>
+                    Com sol passar per aquestes èpoques l'ajuntament ha rebut desenes de peticions de grups que volien formar part del nostre cartell musical,
+                    és per aquest motiu que enguany tindrem concerts en tots els horaris possibles.
+                    Els concerts es duran a terme divendres des de les 19:00 fins a la matinada del dissabte.
+                    I el dissabte començaran a partir de la primera hora de la tarda fins a l'alba del diumenge.
+                </p>
+                <hr>
+                <p>Múltiples famosos han confirmat la seva assistència a la festa major d'enguany a Sant Andreu de Llavaneres.</p>
+                <ul class="famous-list">
+                    <li class="famous-list__person famous-list__person--benedict mb-3">
+                        <span><span class="lead font-weight-bold" lang="en">Benedict Cumberbatch</span>: Actor britànic famós per donar vida a <span lang="en">Sherlock Holmes</span>.</span>
+                    </li>
+                    <li class="famous-list__person famous-list__person--nia mb-3">
+                        <span><span class="lead font-weight-bold" lang="es">Nia Correia</span>: Guanyadora <span lang="es">Operación Triunfo</span> 2020.</span>
+                    </li>
+
+                    <li class="famous-list__person famous-list__person--pierre mb-3">
+                        <span><span class="lead font-weight-bold"><span lang="fr">Pierre</span> Oriola</span>: Basquetbolista jugador del FC Barcelona.</span>
+                    </li>
+                </ul>
+                <hr>
+                <blockquote cite="https://ajllavaneres.cat/santandreu20">
+                    Aquest «Sant Andreu Virtual» ens portarà a casa tota la música, els contes, els actes litúrgics, els focs d'artifici i altres esdeveniments
+                    que no ha estat possible de programar en format presencial. Ho podreu seguir tant pel canal de YouTube de
+                    l'Ajuntament com per la nostra emissora municipal: Ràdio Llavaneres. Així, mirem d'acomplir un doble objectiu:
+                    seguir oferint un servei ludicofestiu que anímicament i emocional segurament necessitem més que mai i, alhora,
+                    donar suport als professionals de la cultura que es troben en un atzucac des de fa mesos.
+                </blockquote>
+                <img src="assets/images/party.png" alt="Concert" class="blob__image--header" title="Gente en concierto">
+            </div>
+        </div>
+        <footer>
+            <div class="footer border-bottom border-white">
+                <div class="row mx-2 mb-2">
+                    <div class="col-auto mx-auto text-center">
+                        Disfruta del festival a Sant Andreu de llavaneres.
+                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-md text-center">
+                        <i class="fas fa-phone pr-1"></i>937023600
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
+                    </div>
+                </div>
+            </div>
+            <div class="row px-3 py-1 info-row">
+                <div class="col-auto logo order-0">
+                    <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+                </div>
+                <div class="col px-0 order-1"></div>
+                <a class="col-sm-auto info-row__link text-center order-2" href="/">
+                    <span class="align-middle info-row__text">Inici</span>
                 </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="grups.html">
+                    <span class="align-middle info-row__text">Grups</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="blog.html">
+                    <span lang="en" class="align-middle info-row__text">Blog</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
+                    <span class="align-middle info-row__text">Contacte</span>
+                </a>
+                <div class="col px-0 order-3"></div>
+                <div class="col-auto social order-1 order-sm-4">
+                    <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
+                        <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
+                    </a>
+                    <a class="social__item" href="https://twitter.com/AjLlavaneres">
+                        <img src="assets/images/twitter.png" alt="Twitter" class="social__img" title="Twitter">
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="row mb-2">
-            <div class="col-md text-center">
-                <i class="fas fa-phone pr-1"></i>937023600
-            </div>
-            <div class="col-md text-center">
-                <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
-            </div>
-            <div class="col-md text-center">
-                <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
-            </div>
-        </div>
-    </div>
-    <div class="row px-3 py-1 info-row">
-        <div class="col-auto logo order-0">
-            <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
-        </div>
-        <div class="col px-0 order-1"></div>
-        <a class="col-sm-auto info-row__link text-center order-2" href="/">
-            <span class="align-middle info-row__text">Inici</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2" href="grups.html">
-            <span class="align-middle info-row__text">Grups</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="blog.html">
-            <span lang="en" class="align-middle info-row__text">Blog</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
-            <span class="align-middle info-row__text">Contacte</span>
-        </a>
-        <div class="col px-0 order-3"></div>
-        <div class="col-auto social order-1 order-sm-4">
-            <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
-                <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
-            </a>
-            <a class="social__item" href="https://twitter.com/AjLlavaneres">
-                <img src="assets/images/twitter.png" alt="Twitter" class="social__img" title="Twitter">
-            </a>
-        </div>
-    </div>
-</footer>
-<script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
-</body>
+        </footer>
+        <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+    </body>
 </html>
