create form. finish project. fix bug with horizontal scroll

--- a/src/blog.html
+++ b/src/blog.html
@@ -5,17 +5,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>LlavaRock. Festival de música</title>
-        <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
-        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
+        <meta name="description" content="Festival de música per la festa major de Sant Andreu de Llavaneres. Blog informatiu sobre la festa major.">
+        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival, blog, festa major">
         <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
     </head>
     <body>
-        <header class="row info-row px-3 py-2">
+        <header class="row info-row mx-0 px-3 py-2">
             <a class="col-auto logo" href="/">
                 <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
             </a>
+            <span class="col-auto d-none d-sm-block">
+                <span class="align-middle info-row__text">Sant Andreu de Llavaneres</span>
+            </span>
             <div class="col px-0"></div>
             <a class="col-auto info-row__link" href="grups.html">
                 <span class="align-middle info-row__text">Grups</span>
@@ -30,20 +33,20 @@
         <div class="blog mx-0">
             <img src="assets/images/santAndreuDeLlavaneres.png" alt="Concert" class="blob__image--header" title="Concert">
 
-            <div class="body mx-4">
-                <p>
+            <div class="body mx-4 mt-4">
+                <p class="text-justify">
                     Com cada any a finals de Novembre celebrarem la festa major d'hivern a Sant Andreu de Llavaneres.
                     Aquest any a estat especialment dur per a tothom i és per aquest motiu que enguany, més que mai, tots tenim ganes de celebrar alguna cosa,
                     i que millor que la festa major del nostre poble.
                 </p>
-                <p>
+                <p class="text-justify">
                     Com sol passar per aquestes èpoques l'ajuntament ha rebut desenes de peticions de grups que volien formar part del nostre cartell musical,
                     és per aquest motiu que enguany tindrem concerts en tots els horaris possibles.
                     Els concerts es duran a terme divendres des de les 19:00 fins a la matinada del dissabte.
                     I el dissabte començaran a partir de la primera hora de la tarda fins a l'alba del diumenge.
                 </p>
                 <hr>
-                <p>Múltiples famosos han confirmat la seva assistència a la festa major d'enguany a Sant Andreu de Llavaneres.</p>
+                <p class="text-justify">Múltiples famosos han confirmat la seva assistència a la festa major d'enguany a Sant Andreu de Llavaneres.</p>
                 <ul class="famous-list">
                     <li class="famous-list__person famous-list__person--benedict mb-3">
                         <span><span class="lead font-weight-bold" lang="en">Benedict Cumberbatch</span>: Actor britànic famós per donar vida a <span lang="en">Sherlock Holmes</span>.</span>
@@ -57,14 +60,14 @@
                     </li>
                 </ul>
                 <hr>
-                <blockquote cite="https://ajllavaneres.cat/santandreu20">
+                <blockquote cite="https://ajllavaneres.cat/santandreu20" class="text-justify">
                     Aquest «Sant Andreu Virtual» ens portarà a casa tota la música, els contes, els actes litúrgics, els focs d'artifici i altres esdeveniments
                     que no ha estat possible de programar en format presencial. Ho podreu seguir tant pel canal de YouTube de
                     l'Ajuntament com per la nostra emissora municipal: Ràdio Llavaneres. Així, mirem d'acomplir un doble objectiu:
                     seguir oferint un servei ludicofestiu que anímicament i emocional segurament necessitem més que mai i, alhora,
                     donar suport als professionals de la cultura que es troben en un atzucac des de fa mesos.
                 </blockquote>
-                <img src="assets/images/party.png" alt="Concert" class="blob__image--header" title="Gente en concierto">
+                <img src="assets/images/party.png" alt="Concert" class="blob__image--header" title="Gent de concert">
             </div>
         </div>
         <footer>
@@ -72,12 +75,12 @@
                 <div class="row mx-2 mb-2">
                     <div class="col-auto mx-auto text-center">
                         Disfruta del festival a Sant Andreu de llavaneres.
-                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
+                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA" target="_blank">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
                     </div>
                 </div>
-                <div class="row mb-2">
+                <div class="row mx-0 mb-2">
                     <div class="col-md text-center">
                         <i class="fas fa-phone pr-1"></i>937023600
                     </div>
@@ -85,11 +88,11 @@
                         <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
                     </div>
                     <div class="col-md text-center">
-                        <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
+                        <i class="fas fa-calendar-alt pr-1"></i>27-30 Novembre
                     </div>
                 </div>
             </div>
-            <div class="row px-3 py-1 info-row">
+            <div class="row mx-0 px-3 py-1 info-row">
                 <div class="col-auto logo order-0">
                     <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
                 </div>
