--- a/src/grups.html
+++ b/src/grups.html
@@ -5,17 +5,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <title>LlavaRock. Festival de música</title>
-        <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
-        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
+        <meta name="description" content="Festival de música per la festa major de Sant Andreu de Llavaneres. Grups invitats.">
+        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival, festa major, grups, bandes">
         <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
     </head>
     <body>
-        <header class="row info-row px-3 py-2">
+        <header class="row info-row mx-0 px-3 py-2">
             <a class="col-auto logo" href="/">
                 <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
             </a>
+            <span class="col-auto d-none d-sm-block">
+                <span class="align-middle info-row__text">Sant Andreu de Llavaneres</span>
+            </span>
             <div class="col px-0"></div>
             <a class="col-auto info-row__link info-row__link--selected" href="grups.html">
                 <span class="align-middle info-row__text">Grups</span>
@@ -108,12 +111,12 @@
                 <div class="row mx-2 mb-2">
                     <div class="col-auto mx-auto text-center">
                         Disfruta del festival a Sant Andreu de llavaneres.
-                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
+                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA" target="_blank">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
                     </div>
                 </div>
-                <div class="row mb-2">
+                <div class="row mx-0 mb-2">
                     <div class="col-md text-center">
                         <i class="fas fa-phone pr-1"></i>937023600
                     </div>
@@ -121,11 +124,11 @@
                         <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
                     </div>
                     <div class="col-md text-center">
-                        <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
+                        <i class="fas fa-calendar-alt pr-1"></i>27-30 Novembre
                     </div>
                 </div>
             </div>
-            <div class="row px-3 py-1 info-row">
+            <div class="row mx-0 px-3 py-1 info-row">
                 <div class="col-auto logo order-0">
                     <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
                 </div>
