--- a/src/grups.html
+++ b/src/grups.html
@@ -11,26 +11,26 @@
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
     </head>
-    <body>
+    <body class="m-0">
         <header class="row info-row mx-0 px-3 py-2">
-            <a class="col-auto logo" href="/">
+            <a class="col-sm-auto text-center logo" href="/">
                 <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
             </a>
-            <span class="col-auto d-none d-sm-block">
+            <span class="col-auto d-none d-md-block">
                 <span class="align-middle info-row__text">Sant Andreu de Llavaneres</span>
             </span>
             <div class="col px-0"></div>
-            <a class="col-auto info-row__link info-row__link--selected" href="grups.html">
+            <a class="col-sm-auto text-center info-row__link info-row__link--selected" href="grups.html">
                 <span class="align-middle info-row__text">Grups</span>
             </a>
-            <a class="col-auto info-row__link" href="blog.html">
+            <a class="col-sm-auto text-center info-row__link" href="blog.html">
                 <span lang="en" class="align-middle info-row__text">Blog</span>
             </a>
-            <a class="col-auto info-row__link" href="contacte.html">
+            <a class="col-sm-auto text-center info-row__link" href="contacte.html">
                 <span class="align-middle info-row__text">Contacte</span>
             </a>
         </header>
-        <div class="body">
+        <div class="body mx-auto">
             <div class="flex-container my-4 mx-2">
                 <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="http://www.elscatarres.cat/" target="_blank" title="Els catarres">
                     <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="flex-item__image">
@@ -117,13 +117,13 @@
                     </div>
                 </div>
                 <div class="row mx-0 mb-2">
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-phone pr-1"></i>937023600
                     </div>
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
                     </div>
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-calendar-alt pr-1"></i>27-30 Novembre
                     </div>
                 </div>
@@ -133,20 +133,20 @@
                     <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
                 </div>
                 <div class="col px-0 order-1"></div>
-                <a class="col-sm-auto info-row__link text-center order-2" href="/">
+                <a class="col-md-auto info-row__link text-center order-2" href="/">
                     <span class="align-middle info-row__text">Inici</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="grups.html">
+                <a class="col-md-auto info-row__link text-center order-2 info-row__link--selected" href="grups.html">
                     <span class="align-middle info-row__text">Grups</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2" href="blog.html">
+                <a class="col-md-auto info-row__link text-center order-2" href="blog.html">
                     <span lang="en" class="align-middle info-row__text">Blog</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
+                <a class="col-md-auto info-row__link text-center order-2" href="contacte.html">
                     <span class="align-middle info-row__text">Contacte</span>
                 </a>
                 <div class="col px-0 order-3"></div>
-                <div class="col-auto social order-1 order-sm-4">
+                <div class="col-auto social order-1 order-md-4">
                     <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
                         <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
                     </a>
