--- a/src/contacte.html
+++ b/src/contacte.html
@@ -11,86 +11,89 @@
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
     </head>
-    <body>
+    <body class="m-0">
         <header class="row info-row mx-0 px-3 py-2">
-            <a class="col-auto logo" href="/">
+            <a class="col-sm-auto text-center logo" href="/">
                 <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
             </a>
-            <span class="col-auto d-none d-sm-block">
+            <span class="col-auto d-none d-md-block">
                 <span class="align-middle info-row__text">Sant Andreu de Llavaneres</span>
             </span>
             <div class="col px-0"></div>
-            <a class="col-auto info-row__link" href="grups.html">
+            <a class="col-sm-auto text-center info-row__link" href="grups.html">
                 <span class="align-middle info-row__text">Grups</span>
             </a>
-            <a class="col-auto info-row__link" href="blog.html">
+            <a class="col-sm-auto text-center info-row__link" href="blog.html">
                 <span lang="en" class="align-middle info-row__text">Blog</span>
             </a>
-            <a class="col-auto info-row__link info-row__link--selected" href="contacte.html">
+            <a class="col-sm-auto text-center info-row__link info-row__link--selected" href="contacte.html">
                 <span class="align-middle info-row__text">Contacte</span>
             </a>
         </header>
-        <div class="body mx-4 my-3">
-            <p class="text-justify">
-                Ajuda'ns a millorar la festa. Digues la teva amb el següent formulari, opinions, millores, propostes...
-                Això ens ajudarà a fer la festa major de Sant Andreu de Llavaneres millor i més pròxima al poble de Sant Andreeu de Llavaneres.
-            </p>
-            <form>
-                <div class="row">
-                    <div class="form-group col-12 col-sm-6">
-                        <label for="exampleFormControlInput1">Nom:</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Joan">
-                    </div>
-                    <div class="form-group col-12 col-sm-6">
-                        <label for="exampleFormControlInput2">Cognoms:</label>
-                        <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="Perez Perez">
-                    </div>
-                    <div class="form-group col-12 col-sm-6">
-                        <label for="exampleFormControlInput3">Edat:</label>
-                        <input type="number" class="form-control" id="exampleFormControlInput3" placeholder="26">
-                    </div>
-                    <div class="form-group col-12 col-sm-6">
-                        <label for="exampleFormControlInput4">Correu electrònic:</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput4" placeholder="name@example.com">
-                    </div>
-                    <div class="form-group col-12 col-sm-6">
-                        <label for="exampleFormControlInput5">Telèfon:</label>
-                        <input type="tel" class="form-control" id="exampleFormControlInput5" placeholder="634412163">
-                    </div>
-                    <div class="form-group col-12">
-                        <label for="exampleFormControlTextarea1">Comentaris:</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                    <div class="col-12">
-                        <label>Quins dies assistiràs a la festa major:</label>
-                        <br/>
-                        <div class="row mx-0">
-                            <div class="form-check form-check-inline col-12 col-sm-auto">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                                <label class="form-check-label" for="inlineCheckbox1">27 Divendres</label>
-                            </div>
-                            <div class="form-check form-check-inline col-12 col-sm-auto">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                                <label class="form-check-label" for="inlineCheckbox2">28 Dissabte</label>
-                            </div>
-                            <div class="form-check form-check-inline col-12 col-sm-auto">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                                <label class="form-check-label" for="inlineCheckbox3">29 Diumenge</label>
-                            </div>
-                            <div class="form-check form-check-inline col-12 col-sm-auto">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                                <label class="form-check-label" for="inlineCheckbox4">30 Dilluns</label>
+        <div class="body mx-auto">
+            <div class="my-4 mx-2">
+
+                <p class="text-justify">
+                    Ajuda'ns a millorar la festa. Digues la teva amb el següent formulari, opinions, millores, propostes...
+                    Això ens ajudarà a fer la festa major de Sant Andreu de Llavaneres millor i més pròxima al poble de Sant Andreeu de Llavaneres.
+                </p>
+                <form>
+                    <div class="row">
+                        <div class="form-group col-12 col-md-6">
+                            <label for="exampleFormControlInput1">Nom:</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Joan">
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label for="exampleFormControlInput2">Cognoms:</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="Perez Perez">
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label for="exampleFormControlInput3">Edat:</label>
+                            <input type="number" class="form-control" id="exampleFormControlInput3" placeholder="26">
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label for="exampleFormControlInput4">Correu electrònic:</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput4" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group col-12 col-md-6">
+                            <label for="exampleFormControlInput5">Telèfon:</label>
+                            <input type="tel" class="form-control" id="exampleFormControlInput5" placeholder="634412163">
+                        </div>
+                        <div class="form-group col-12">
+                            <label for="exampleFormControlTextarea1">Comentaris:</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <div class="col-12">
+                            <label>Quins dies assistiràs a la festa major:</label>
+                            <br/>
+                            <div class="row mx-0">
+                                <div class="form-check form-check-inline col-12 col-md-auto">
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                                    <label class="form-check-label" for="inlineCheckbox1">27 Divendres</label>
+                                </div>
+                                <div class="form-check form-check-inline col-12 col-md-auto">
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                                    <label class="form-check-label" for="inlineCheckbox2">28 Dissabte</label>
+                                </div>
+                                <div class="form-check form-check-inline col-12 col-md-auto">
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                                    <label class="form-check-label" for="inlineCheckbox3">29 Diumenge</label>
+                                </div>
+                                <div class="form-check form-check-inline col-12 col-md-auto">
+                                    <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+                                    <label class="form-check-label" for="inlineCheckbox4">30 Dilluns</label>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group row flex-row-reverse">
-                    <div class="col-auto">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    <div class="form-group row flex-row-reverse">
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
         <footer>
             <div class="footer border-bottom border-white">
@@ -103,13 +106,13 @@
                     </div>
                 </div>
                 <div class="row mx-0 mb-2">
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-phone pr-1"></i>937023600
                     </div>
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
                     </div>
-                    <div class="col-md text-center">
+                    <div class="col-lg text-center">
                         <i class="fas fa-calendar-alt pr-1"></i>27-30 Novembre
                     </div>
                 </div>
@@ -119,20 +122,20 @@
                     <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
                 </div>
                 <div class="col px-0 order-1"></div>
-                <a class="col-sm-auto info-row__link text-center order-2" href="/">
+                <a class="col-md-auto info-row__link text-center order-2" href="/">
                     <span class="align-middle info-row__text">Inici</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2" href="grups.html">
+                <a class="col-md-auto info-row__link text-center order-2" href="grups.html">
                     <span class="align-middle info-row__text">Grups</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2" href="blog.html">
+                <a class="col-md-auto info-row__link text-center order-2" href="blog.html">
                     <span lang="en" class="align-middle info-row__text">Blog</span>
                 </a>
-                <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="contacte.html">
+                <a class="col-md-auto info-row__link text-center order-2 info-row__link--selected" href="contacte.html">
                     <span class="align-middle info-row__text">Contacte</span>
                 </a>
                 <div class="col px-0 order-3"></div>
-                <div class="col-auto social order-1 order-sm-4">
+                <div class="col-auto social order-1 order-md-4">
                     <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
                         <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
                     </a>
