fix images with copyright. fix bug with list

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
                     </div>
                 </a>
                 <a class="grid-item grid-item--double" href="https://ajllavaneres.cat/" target="_blank" title="Calendari">
-                    <img src="assets/images/bands/november.jpg" alt="Calendari" class="grid-item__image">
+                    <img src="assets/images/bands/november.png" alt="Calendari" class="grid-item__image">
                     <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
                     <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
                         Calendari
